# RACoherence

./: .gitignore  .gitmodules  CMakeLists.txt  TODO  blockAllocator.hpp  cacheAgent.hpp  cacheTracker.hpp  cacheops.hpp  config.hpp  copier.hpp  design.md  flush.hpp  logBuffer.hpp  logger.hpp  main.cpp  memLayout.hpp  types.hpp  user.hpp  util.hpp  vectorClock.hpp  worker.hpp  workload.hpp
backup/: logBuffer_locks.hpp
include/: CLGroup.hpp  CLTracker.hpp  CXLSync.hpp  MPMCQueue.hpp  SPMCQueue.hpp  annotations.hpp  cacheAgent.hpp  cacheInfo.hpp  cacheTracker.hpp  clGroup.hpp  clTracker.hpp  clhLock.hpp  clh_mutex.hpp  clh_rwlock.hpp  config.hpp  cxlMalloc.hpp  cxlSync.hpp  dlmalloc.h  extentPool.hpp  flush.hpp  flushUtils.hpp  global.hpp  globalMeta.hpp  instrumentLib.hpp  jemallocPool.hpp  localCLTable.hpp  localCLTracker.hpp  logBuffer.hpp  logManager.hpp  logManager.hpp.bak  logManager2.hpp  logManager_no_freelist.hpp  logger.hpp  malloc.hpp  maskedPtr.hpp  mcsLock.hpp  memLayout.hpp  memoryPool.hpp  memoryPool2.hpp  microbench.hpp  (+9 more)
scripts/: run.sh
src/: benchMain.cpp  bench_main.cpp  cacheAgent.cpp  clh_mutex.cpp  clh_rwlock.cpp  cxlMalloc.cpp  cxlSync.cpp  instrumentLib.cpp  logBuffer.cpp  logger.cpp  main.cpp  malloc.c  microbench.cpp  runtime.cpp  threadOps.cpp  user.cpp
test/: testCacheTracker.cpp  testMemoryPool.cpp
